--- a/Calculator/app/src/main/res/drawable/edit_text_border.xml
+++ b/Calculator/app/src/main/res/drawable/edit_text_border.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
-</selector>
+    <stroke
+        android:color="@color/edit_text_border_color"
+        android:width="1dp" />
+    <corners android:radius="5dp" />
+</shape>
