--- a/Calculator/app/src/main/res/layout/activity_main.xml
+++ b/Calculator/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,157 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/hint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <EditText
+        android:id="@+id/number_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_alignParentTop="true"
+        android:layout_margin="@dimen/margin_sixteen"
+        android:background="@drawable/edit_text_border"
+        android:hint="@string/edit_text_hint"
+        android:importantForAutofill="no"
+        android:inputType="number"
+        android:padding="@dimen/padding_eight" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="@dimen/margin_eight"
+        android:orientation="vertical"
+        android:weightSum="4">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button_one"
+                style="@style/buitton_style"
+                android:onClick="operationFunction"
+                android:text="@string/button_one" />
+
+            <Button
+                android:id="@+id/button_two"
+                style="@style/buitton_style"
+                android:onClick="operationFunction"
+                android:text="@string/button_two" />
+
+            <Button
+                android:id="@+id/button_three"
+                style="@style/buitton_style"
+                android:onClick="operationFunction"
+                android:text="@string/button_three" />
+
+            <Button
+                android:id="@+id/button_division"
+                style="@style/buitton_style"
+                android:layout_marginRight="@dimen/margin_eight"
+                android:onClick="operationFunction"
+                android:text="@string/button_division" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button_four"
+                style="@style/buitton_style"
+                android:onClick="operationFunction"
+                android:text="@string/button_four" />
+
+            <Button
+                android:id="@+id/button_five"
+                style="@style/buitton_style"
+                android:onClick="operationFunction"
+                android:text="@string/button_five" />
+
+            <Button
+                android:id="@+id/button_six"
+                style="@style/buitton_style"
+                android:onClick="operationFunction"
+                android:text="@string/button_six" />
+
+            <Button
+                android:id="@+id/button_minus"
+                style="@style/buitton_style"
+                android:layout_marginRight="@dimen/margin_eight"
+                android:onClick="operationFunction"
+                android:text="@string/button_minus" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button_seven"
+                style="@style/buitton_style"
+                android:onClick="operationFunction"
+                android:text="@string/button_seven" />
+
+            <Button
+                android:id="@+id/button_eight"
+                style="@style/buitton_style"
+                android:onClick="operationFunction"
+                android:text="@string/button_eight" />
+
+            <Button
+                android:id="@+id/button_nine"
+                style="@style/buitton_style"
+                android:onClick="operationFunction"
+                android:text="@string/button_nine" />
+
+            <Button
+                android:id="@+id/button_plus"
+                style="@style/buitton_style"
+                android:layout_marginRight="@dimen/margin_eight"
+                android:onClick="operationFunction"
+                android:text="@string/button_plus" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button_c"
+                style="@style/buitton_style"
+                android:onClick="operationFunction"
+                android:text="@string/button_c" />
+
+            <Button
+                android:id="@+id/button_zero"
+                style="@style/buitton_style"
+                android:onClick="operationFunction"
+                android:text="@string/button_zero" />
+
+            <Button
+                android:id="@+id/button_dot"
+                style="@style/buitton_style"
+                android:onClick="operationFunction"
+                android:text="@string/button_dot" />
+
+            <Button
+                android:id="@+id/button_equal"
+                style="@style/buitton_style"
+                android:layout_marginRight="@dimen/margin_eight"
+                android:onClick="operationFunction"
+                android:text="@string/button_equals" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+</RelativeLayout>
