--- a/Calculator/app/src/main/res/values/styles.xml
+++ b/Calculator/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="android:layout_height">75dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:textSize">@dimen/button_text_size</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:layout_marginStart">@dimen/margin_eight</item>
         <item name="android:layout_marginTop">@dimen/margin_eight</item>
         <item name="android:layout_marginBottom">@dimen/margin_eight</item>
