Guess my number app, completed

--- a/GuessNumber/app/src/main/res/layout/activity_main.xml
+++ b/GuessNumber/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
     <TextView
@@ -38,6 +39,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
+            app:srcCompat="@drawable/ic_arrow_downward"
+            android:onClick="clickDownwardArrow"
             android:background="@drawable/background_circle_blue"
             android:contentDescription="@string/str_arrow_down_desc" />
 
@@ -45,6 +48,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            app:srcCompat="@drawable/ic_check"
+            android:onClick="clickSuccess"
             android:background="@drawable/background_circle_pink"
             android:contentDescription="@string/str_arrow_success_desc" />
 
@@ -52,6 +57,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            app:srcCompat="@drawable/ic_arrow_upward"
+            android:onClick="clickUpwardArrow"
             android:background="@drawable/background_circle_blue"
             android:contentDescription="@string/str_arrow_up_desc" />
     </RelativeLayout>
@@ -62,6 +69,7 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_margin="@dimen/margin_eight"
+        android:onClick="clickResetButton"
         android:background="@color/colorPurple"
         android:text="@string/str_reset"
         android:textColor="@color/white" />
