Dictionary app, quering json, http connection and internet access

--- a/DictionaryApp/app/src/main/res/layout/activity_main.xml
+++ b/DictionaryApp/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <EditText
+        android:id="@+id/word_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_eight"
@@ -22,6 +23,7 @@
         android:textStyle="bold" />
 
     <Button
+        android:id="@+id/find_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_eight"
