--- a/DictionaryApp/app/src/main/res/layout/activity_definition.xml
+++ b/DictionaryApp/app/src/main/res/layout/activity_definition.xml
@@ -7,6 +7,7 @@
     tools:context=".WordDefinitionActivity">
 
     <ImageView
+        android:id="@+id/img_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -21,6 +22,7 @@
         android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/margin_eight"
+        android:padding="8dp"
         android:textColor="@color/black"
         android:textSize="@dimen/text_size_16"
         tools:text="@string/tools_definition" />
