news App, more articles functionality

--- a/NewsApp/app/src/main/res/layout/activity_main.xml
+++ b/NewsApp/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
             android:layout_width="256dp"
             android:layout_height="36dp"
             android:layout_margin="@dimen/margin_eight"
+            android:inputType="text"
             android:background="@drawable/edit_text_border" />
 
     </LinearLayout>
