--- a/FitnessApp/app/src/main/res/navigation/navigation_graph.xml
+++ b/FitnessApp/app/src/main/res/navigation/navigation_graph.xml
@@ -18,5 +18,41 @@
         android:id="@+id/exerciseFragment"
         android:name="com.wolfgang.fitnessapp.ExerciseFragment"
         android:label="fragment_exercise2"
-        tools:layout="@layout/fragment_exercise2" />
+        tools:layout="@layout/fragment_exercise2" >
+        <action
+            android:id="@+id/action_exerciseFragment_to_wellDoneFragment2"
+            app:destination="@id/wellDoneFragment2"
+            app:popUpTo="@id/exerciseFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_exerciseFragment_to_tryAgainFragment"
+            app:destination="@id/tryAgainFragment"
+            app:popUpTo="@id/exerciseFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/wellDoneFragment2"
+        android:name="com.wolfgang.fitnessapp.WellDoneFragment"
+        android:label="fragment_well_done"
+        tools:layout="@layout/fragment_well_done" >
+        <action
+            android:id="@+id/action_wellDoneFragment2_to_exerciseFragment"
+            app:destination="@id/exerciseFragment"
+            app:popUpTo="@id/exerciseFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/tryAgainFragment"
+        android:name="com.wolfgang.fitnessapp.TryAgainFragment"
+        android:label="fragment_try_again"
+        tools:layout="@layout/fragment_try_again" >
+        <action
+            android:id="@+id/action_tryAgainFragment_to_exerciseFragment"
+            app:destination="@id/exerciseFragment"
+            app:popUpTo="@id/exerciseFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="com.wolfgang.fitnessapp.AboutFragment"
+        android:label="fragment_about"
+        tools:layout="@layout/fragment_about" />
 </navigation>
